--- a/XOServerApp/src/css/cssStylingServer.css
+++ b/XOServerApp/src/css/cssStylingServer.css
@@ -11,23 +11,71 @@ and open the template in the editor.
 
 .onOffBtn
 {
--fx-background-color : #393351;
+-fx-background-color : transparent;
 -fx-background-radius :  10 10 10 10;
 -fx-text-fill: white;
 -fx-font-size: 14px;
 -fx-pref-width: 140px;
 /*-fx-border-insets: 5px;*/
 -fx-text-alignment: left;
--fx-padding: 10 10 10 10;
+
 }
 
 .hboxStyle{
-    -fx-background-color:  #393351;
+    -fx-background-color:  #292f47;
     -fx-background-radius :  10 10 10 10;
-    -fx-padding: 0 10 0 10;
-    -fx-spacing:10px;
+    -fx-padding: 4 14 4 14;
+
+  
 }
 
 .vboxStyle{
     -fx-spacing:5px;
+}
+.scroll-pane{
+   -fx-background-color:transparent;
+}
+.scroll-pane > .viewport {  
+   -fx-background-color: transparent;
+}
+.myDialog{
+    -fx-background-color: #292f47;
+    -fx-padding: 20 20 20 25;
+}
+.myDialog > *.button-bar > *.container{
+    -fx-background-color: #292f47;
+}
+.myDialog > *.label.content{
+    -fx-font-size: 20px;
+    -fx-font-weight: bold;
+}
+.myDialog:header *.header-panel{
+    -fx-background-color: #292f47;
+}
+.myDialog:header *.header-panel *.label{
+    -fx-font-size: 30px;
+    -fx-text-fill: #ffffff;
+}
+.dialog-pane .button{
+   -fx-background-color : #ffffff;
+   -fx-background-radius :  20;
+   -fx-text-fill:#292f47;
+   -fx-font-weight: bold;
+ }
+ .chart {
+    -fx-padding: 10px;
+    -fx-background-color: transparent;
+    -fx-legend-visible: false;
+}
+.chart-plot-background {
+    -fx-background-color:transparent;
+}
+
+.chart-pie {
+    -fx-border-color: derive(-fx-pie-color, 1%);
+    -fx-border-width: 0px;
+}
+.linear-grad
+{
+    -fx-background-color: linear-gradient(to bottom left, #A868A0, #2D75E8);
 }
